objects/Applicant__c.object
<CustomObject>
    <description>Applicants are those who apply for the job i.e for the vacancy</description>
    <fields>
        <fullName>Applicant_age__c</fullName>
        <formula>( TODAY()  - Date_of_Birth__c )  / 365</formula>
        <inlineHelpText>Current age of the Applicant</inlineHelpText>
        <label>Applicant age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Female__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Female</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Male</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applicants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_No__c</fullName>
        <label>Phone No.</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SSN_Number__c</fullName>
        <label>SSN Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zipcode__c</fullName>
        <label>Zipcode</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Applicant</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Details</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Gender__c</columns>
        <columns>Female__c</columns>
        <columns>Date_of_Birth__c</columns>
        <columns>Applicant_age__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <columns>Email__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>jaanu jaan</value>
        </filters>
        <label>All Details</label>
    </listViews>
    <listViews>
        <fullName>Only_Females</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Date_of_Birth__c</columns>
        <columns>Applicant_age__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <columns>Phone_No__c</columns>
        <columns>Email__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Female__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Only Females</label>
    </listViews>
    <listViews>
        <fullName>Only_Males</fullName>
        <columns>OBJECT_ID</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Date_of_Birth__c</columns>
        <columns>Applicant_age__c</columns>
        <columns>Street_Address__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <columns>Phone_No__c</columns>
        <columns>Email__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Gender__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Only Males</label>
    </listViews>
    <listViews>
        <fullName>Recruitment_Queue_Applicant</fullName>
        <filterScope>Queue</filterScope>
        <label>Recruitment Queue</label>
        <queue>Recruitment_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Under_30yrs</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Applicant_age__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <columns>Phone_No__c</columns>
        <columns>Email__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Applicant_age__c</field>
            <operation>lessOrEqual</operation>
            <value>30</value>
        </filters>
        <label>Under 30yrs</label>
    </listViews>
    <nameField>
        <label>Applicant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applicants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Phone_number_should_be_10_digits</fullName>
        <active>true</active>
        <description>Phone number should be 10 digits</description>
        <errorConditionFormula>NOT(REGEX(  Phone_No__c , &quot;(\\d){10}&quot;))</errorConditionFormula>
        <errorDisplayField>Phone_No__c</errorDisplayField>
        <errorMessage>Phone number should be of 10 digits</errorMessage>
    </validationRules>
</CustomObject>